--- a/proyecto_final.Rmd
+++ b/proyecto_final.Rmd
@@ -15,9 +15,17 @@ editor_options:
 
 ## Análisis estadístico de datos
 
-### Cuál es la canción que pega
+### Proyecto: ¿Cuál es la canción que pega?
 
-#### Introducción
+# Tabla de Contenido
+
+-   [Introducción](#introducción)
+-   [Objetivos](#objetivos)
+-   [1. Descripción de la pregunta de investigación]
+-   [2. Descripción de los datos]
+-   [3. Presentación del análisis estadístico de los datos]\
+
+## Introducción {#introducción}
 
 La creación de una canción exitosa es una meta anhelada por la mayoría
 de los artistas, pero no siempre es fácil lograrla. En este trabajo, se
@@ -32,15 +40,61 @@ Además, se pretende evaluar si es posible predecir la aceptación del
 público y determinar si el artista ofrece al mercado un producto
 apetecido.
 
-#### Objetivos
+## Objetivos {#objetivos}
 
-Establecer cuáles son las variables que afectan favorablemente la
-aceptación del público mediante la aplicación de métodos estadísticos al
-conjunto de datos de las 10 mejores canciones de múltiples artistas
-publicadas en Spotify. Evaluar si existe alguna correlación entre el
-número de vistas en Youtube, el número de comentarios y el número de "me
-gusta", y la frecuencia con la que es sugerido un tema por parte del
-algoritmo de la aplicación.
+1.  Establecer cuáles son las variables que afectan favorablemente la
+    aceptación del público mediante la aplicación de métodos
+    estadísticos al conjunto de datos de las 10 mejores canciones de
+    múltiples artistas publicadas en Spotify.
+
+2.  Evaluar si existe alguna correlación entre el número de vistas en
+    Youtube, el número de comentarios y el número de "me gusta", y la
+    frecuencia con la que es sugerido un tema por parte del algoritmo de
+    la aplicación.
+
+3.  El objetivo principal de este proyecto es producir una aplicación de
+    los métodos estadísticos multivariantes vistos a lo largo del curso
+    utilizando uno o varios conjuntos de datos.
+
+## 1. Descripción de la pregunta de investigación
+
+Descripción de la pregunta / problema de investigación:
+
+El propósito de esta investigación es realizar un análisis estadístico
+de las variables obtenidas de dos populares plataformas de streaming de
+música en línea, Spotify y YouTube, para investigar los factores que
+influyen en la aceptación de la audiencia y el éxito comercial de nuevas
+canciones en el mercado digital. La pregunta principal de la
+investigación es: ¿Cuáles son los atributos clave que contribuyen
+significativamente a la aceptación por parte de la audiencia y al éxito
+comercial de las canciones en las plataformas digitales de música?
+
+Los problemas de investigación identificados son los siguientes:
+
+1.  Identificar los atributos musicales y no musicales que están
+    asociados con una mayor aceptación de la audiencia en Spotify y
+    YouTube.
+
+2.  Determinar si existen diferencias significativas en los atributos
+    preferidos por la audiencia entre ambas plataformas.
+
+3.  Evaluar la viabilidad de predecir la aceptación de la audiencia en
+    función de los atributos identificados.
+
+4.  Investigar si ofrecer productos musicales con los atributos deseados
+    influye en el éxito comercial de los artistas en la industria
+    musical.
+
+Al realizar un análisis estadístico de los datos obtenidos de Spotify y
+YouTube, esta investigación pretende proporcionar información valiosa a
+los artistas y productores, permitiéndoles centrarse en los atributos
+más relevantes y optimizar la producción de sus canciones, aumentando
+así sus posibilidades de éxito en la competitiva industria musical.
+Además, las conclusiones de este estudio pueden tener implicaciones
+prácticas para la toma de decisiones estratégicas en el ámbito de la
+promoción y distribución de música en línea.
+
+## 2. Descripción de los datos
 
 Conjunto de Datos En la dirección
 <https://www.kaggle.com/datasets/salvatorerastelli/spotify-and-youtube>
@@ -49,55 +103,426 @@ las 28 variables son numéricas; entre ellas contempla la cantidad de
 reproducciones en las dos plataformas mencionadas y las manifestaciones
 positivas.
 
-```{r}
+El conjunto de datos proporcionado en el enlace
+<https://www.kaggle.com/datasets/salvatorerastelli/spotify-and-youtube>,
+contiene una matriz de datos con un tamaño de 20,718 filas y 28
+columnas. Esto significa que hay 20,718 observaciones o instancias, y
+que cada observación tiene asociadas 28 variables diferentes.
+
+Dentro de este conjunto de datos, hay al menos 10 variables que se
+representan como valores numéricos. Estas variables recogen diversos
+aspectos relacionados con las canciones, como el número de
+reproducciones o streams que recibieron en Spotify y YouTube. Además, el
+conjunto de datos incluye variables que miden manifestaciones positivas
+o comentarios, que podrían indicar el nivel de aceptación o compromiso
+del público con las canciones.
+
+```{r include=FALSE}
 library(readr)
 library(dplyr)
 datos <- read.csv('Spotify_Youtube.csv')
 colnames(datos)
 ```
 
-Es importante eliminar las columnas que no son relevantes para el
-presente estudio ya que son categóricas:
-
--   X
-
--   Artist
-
--   Track
-
--   Album
-
--   Album_type
-
--   Title
-
--   official_video
-
--   Url_spotify
-
--   Uri
-
--   Url_youtube
-
--   Channel
-
--   Description
-
--   Licensed
-
-```{r}
-datos %>% select(-one_of('X', 'Artist', 'Track', 'Album', 'Album_type', 'Title', 'official_video', 'Url_spotify', 'Uri', 'Url_youtube', 'Channel', 'Description', 'Licensed'))
-#colnames(datos)
+```{r include=FALSE}
+str(datos)
 ```
 
-Agregar columna views/likes
+### 2.1 Descripción conceptual de los datos.
 
-```{r}
-datos$v_l 
+Con base en el análisis de los datos, las siguientes variables no deben
+tenerse en cuenta en el modelo de regresión lineal múltiple, debido a
+que para el modelo de regresión lineal múltiple es fundamental excluir
+las variables categóricas, los identificadores únicos y las variables
+relacionadas con la información descriptiva. Estas variables carecen de
+un carácter cuantitativo directo y no proporcionan información relevante
+para predecir con exactitud la variable dependiente. Al excluir estas
+variables del análisis, podemos centrarnos en los predictores
+significativos que mejorarán la capacidad predictiva y la fiabilidad del
+modelo.
+
+**X**: Número de índice de la observación en el conjunto de datos. Esta
+variable sirve como identificador sin significación estadística y no
+aporta información sustancial para predecir la variable dependiente.
+
+**Artista:** Nombre del artista que interpreta la canción. Como variable
+categórica, no posee carácter cuantitativo y no debe utilizarse
+directamente en el modelo de regresión.
+
+**Url_spotify:** URL de Spotify asociada al artista. Esta variable
+representa una dirección web y carece de carácter cuantitativo. Además,
+no ofrece información significativa para predecir la variable
+dependiente.
+
+**Track:** Nombre de la canción. Al igual que la variable "Artista", es
+categórica y carece de carácter cuantitativo directo.
+
+**Álbum:** Nombre del álbum al que pertenece la canción. Al tratarse de
+una variable categórica, no puede incorporarse directamente al modelo de
+regresión lineal múltiple.
+
+**Tipo_álbum:** Tipo de álbum. Al ser una variable categórica, no posee
+un carácter cuantitativo directo y no aporta información sustancial para
+predecir la variable dependiente.
+
+**Uri:** Identificador único de la canción en Spotify. Esta variable, al
+servir como identificador único, carece de carácter cuantitativo y no
+aporta información relevante para el modelo de regresión.
+
+**Url_youtube:** URL de YouTube asociada al vídeo de la canción. De
+forma similar a "Url_spotify", esta variable representa una dirección
+web y no posee un carácter cuantitativo directo.
+
+**Title:** Título del vídeo de la canción. Como variable categórica, no
+posee un carácter cuantitativo directo y no aporta información
+sustancial para predecir la variable dependiente.
+
+**Canal:** Canal de YouTube asociado al artista. Al ser una variable
+categórica, no posee un carácter cuantitativo directo y no aporta
+información relevante para el modelo de regresión.
+
+**Descripción:** Descripción asociada al vídeo de la canción. Al ser una
+variable textual, carece de carácter cuantitativo directo y no aporta
+información sustancial para predecir la variable dependiente.
+
+**Licensed**" como "**official_video**" son variables categóricas.
+
+Después de realizar el análisis anterior, se elimina del conjunto de
+datos aquellas columnas o variables categóricas que no aportan
+información relevante para el modelo de regresión.
+
+Asimismo, se calcula la relación entre las variables "Views" y "Likes"
+del conjunto de datos y el resultado se asigna a una nueva columna
+llamada "views_likes_ratio", El conjunto de datos resultante, se muestra
+a continuación, luego de identificar y eliminar los datos faltantes:
+
+```{r include=FALSE}
+# Eliminación de variables categóricas:
+
+datos <- datos %>% select(-one_of('X', 'Artist', 'Track', 'Album', 'Album_type', 'Title', 'official_video', 'Url_spotify', 'Uri', 'Url_youtube', 'Channel', 'Description', 'Licensed'))
+colnames(datos)
 ```
 
-Análisis de los datos (02 junio 2023)
+```{r include=FALSE}
+datos_df <- datos  # Crear una copia del conjunto de datos original
 
-PCA (Rubén)
+# calcula y asigna la relación "views_likes_ratio" entre las variables "Views" y "Likes"
 
-Regresión lineal (Vladimir) -
+datos_df$views_likes_ratio <-   datos_df$Likes / datos_df$Views
+```
+
+```{r include=FALSE}
+
+# Calcula la cantidad de datos faltantes por columna
+datos_faltantes <- colSums(is.na(datos_df))
+
+# Imprime la cantidad de datos faltantes por columna
+print(datos_faltantes)
+```
+
+```{r include=FALSE}
+# Eliminar filas con datos faltantes
+datos_df <- na.omit(datos_df)
+```
+
+```{r echo=FALSE}
+# Obtiene el número total de columnas del conjunto de datos
+#num_cols <- ncol(datos_df)
+
+# Calcula el tamaño de cada parte
+#part_size <- num_cols %/% 3
+
+# Muestra la primera parte de columnas
+#head(datos_df[, 1:part_size])
+
+# Mouestra la segunda parte de columnas
+#head(datos_df[, (part_size+1):(2*part_size)])
+
+# Muestra la tercera parte de columnas
+#head(datos_df[, ((2*part_size)+1):num_cols])
+```
+
+```{r echo=FALSE, message=FALSE}
+# Imprime el encabezado del conjunto de datos resultante
+
+library(knitr)
+library(kableExtra)
+
+tabla <- head(datos_df)[1:8]
+Tabla <- kable(tabla, col.names = colnames(tabla)) %>%
+  kable_styling(font_size = 10) %>%
+  add_header_above(header = NULL)
+
+Tabla
+```
+
+### 2.2 Análisis individual de variables.
+
+La siguiente tabla contiene los estadísticos de cada una de las
+variables del conjunto de datos a analizar:
+
+```{r echo=FALSE, message=FALSE}
+library(knitr)
+library(kableExtra)
+
+resumen_estadistico <- summary(datos_df)
+Tabla_estadisticas <- kable(resumen_estadistico) %>%
+  kable_styling(font_size = 10)
+
+Tabla_estadisticas
+
+```
+
+A continuación se presentan los histogramas de cada una de las
+variables:
+
+```{r echo=FALSE, message=FALSE}
+# Histogramas de todas las variables
+
+# Ajusta los márgenes de la figura
+par(mar = c(2, 2, 2, 2))
+
+# Crea una matriz de subplots para los histogramas
+par(mfrow = c(4, 2))
+
+# Itera sobre las primeras ocho variables y crea el histograma
+variables <- colnames(datos_df)[1:16]
+for (i in 1:length(variables)) {
+  hist(datos_df[, variables[i]], main = variables[i], xlab = "", col = "lightblue")
+}
+
+# Restaura el diseño de gráficos a una sola columna y una fila
+par(mfrow = c(1, 1))
+```
+
+### 2.3 Análisis conjunto de variables (correlaciones)
+
+```{r echo=FALSE, message=FALSE}
+library(reshape2)
+library(ggplot2)
+# Calculo de la matriz de correlación
+correlaciones <- cor(datos_df)
+
+# Convertir la matriz en un dataframe
+cor_df <- melt(correlaciones)
+
+
+# Graficar la matriz de correlación con un heatmap y anotaciones en las celdas
+ggplot(cor_df, aes(x=Var1, y=Var2, fill=value)) + 
+  geom_tile() + 
+  scale_fill_gradient2(low="blue", mid="white", high="red", 
+                       midpoint=0, limit=c(-1,1), space="Lab", name="Correlación") +
+  theme_minimal() + 
+  theme(axis.text.x = element_text(angle = 90, vjust = 1, 
+                                    size = 10, hjust = 1),
+        axis.text.y = element_text(size = 10)) + 
+  coord_fixed() + 
+  geom_text(aes(label = round(value, 2)), size = 2, color = "black", alpha = 0.7) + 
+  theme(plot.margin = unit(c(0.1, 0.1, 0.1, 0.1), "cm"))
+```
+
+Basado en la matriz de correlaciones, a continuación se describen
+algunas de las correlaciones más relevantes:
+
+1.  **Danceability y Valence:** Tienen una correlación positiva de
+    0.463, lo que indica que las canciones con mayor "danceability"
+    tienden a tener una mayor "valence" o positividad en su sonido.
+
+2.  **Energy y Loudness:** Tienen una correlación positiva de 0.745, lo
+    que sugiere que las canciones con mayor "energy" tienden a tener un
+    mayor "loudness" o volumen.
+
+3.  **Energy y Acousticness:** Tienen una correlación negativa de
+    -0.662, lo que implica que las canciones con mayor "energy" tienden
+    a tener menor "acousticness" o menor presencia de elementos
+    acústicos.
+
+4.  **Valence y Views:** Tienen una correlación positiva de 0.602, lo
+    que indica que las canciones con mayor "valence" tienden a tener más
+    vistas en plataformas de streaming.
+
+5.  **Views y Likes:** Tienen una correlación positiva de 0.892, lo que
+    sugiere que las canciones con más vistas también tienden a tener más
+    "likes" o me gusta por parte de los usuarios.
+
+6.  **Danceability y Loudness**: Tienen una correlación positiva de
+    0.358, lo que sugiere que las canciones con mayor "danceability"
+    tienden a tener un mayor "loudness".
+
+### 2.4 Identificación de datos atípicos y tratamiento de los mismos
+
+Se calculó la cantidad de datos faltantes en el conjunto de datos
+"datos" previo al análisis de la información, y se eliminaron dichas
+observaciones del conjunto de datos.
+
+```{r include=FALSE, message=FALSE}
+
+library(knitr)
+library(kableExtra)
+
+# Crear una tabla con los datos faltantes
+tabla_datos_faltantes <- data.frame(Datos_faltantes = datos_faltantes)
+
+# Imprimir la tabla en formato horizontal
+kable(tabla_datos_faltantes, format = "html") %>%
+  kable_styling(bootstrap_options = "striped", font_size = 12, full_width = FALSE, position = "float_left")
+
+```
+
+## 3. Presentación del análisis estadístico de los datos
+
+### 3.1 Métodos
+
+```{r include=FALSE}
+# Ajuste de regresión lineal múltiple para predecir la variable views_likes_ratio.
+
+datos_RL <- lm(views_likes_ratio~Danceability
+              + Energy 
+              + Key
+              + Loudness 
+              + Speechiness 
+              + Acousticness 
+              + Instrumentalness 
+              + Liveness
+              + Valence 
+              + Tempo 
+              + Duration_ms
+              #+ Views
+              #+ Likes
+              + Comments
+              + Stream,
+              data = datos_df)
+datos_RL
+```
+
+```{r echo=FALSE, message=FALSE}
+library(knitr)
+library(kableExtra)
+
+# Obtener el resumen del modelo
+resumen_modelo <- summary(datos_RL)
+
+# Crear una tabla con los coeficientes y los estadísticos de interés
+tabla_resumen <- data.frame(
+  Coefficients = rownames(resumen_modelo$coefficients),
+  Estimate = resumen_modelo$coefficients[, "Estimate"],
+  `Std. Error` = resumen_modelo$coefficients[, "Std. Error"],
+  `t value` = resumen_modelo$coefficients[, "t value"],
+  `Pr(>|t|)` = resumen_modelo$coefficients[, "Pr(>|t|)"],
+  `Multiple R-squared` = resumen_modelo$r.squared,
+  `Adjusted R-squared` = resumen_modelo$adj.r.squared
+)
+
+# Formatear la tabla con kable y kableExtra
+tabla_formateada <- kable(tabla_resumen, align = "c", caption = "Resumen del modelo de regresión lineal múltiple datos_RL") %>%
+  kable_styling(bootstrap_options = "striped", full_width = FALSE, font_size = 12)
+
+# Imprimir la tabla
+tabla_formateada
+
+```
+
+Con el objetivo de mejorar el ajuste del modelo de regresión lineal
+múltiple, consideraremos la eliminación de las variables que tienen un
+valor p alto (p \> 0.05), ya que indican una falta de significancia
+estadística en relación a la variable dependiente (views_likes_ratio).
+En base a los resultados proporcionados, las variables a retirar del
+modelo son:
+
+-   **Key:** La variable Key tiene un coeficiente estimado de -3.249e-05
+    y un valor p de 0.134677. Esto indica que la tonalidad de la canción
+    (clave musical) no es estadísticamente significativa para predecir
+    la variable dependiente. Por lo tanto, podríamos considerar
+    eliminarla del modelo.
+
+-   **Acousticness:** La variable Acousticness tiene un coeficiente
+    estimado de -2.220e-04 y un valor p de 0.555388. Esto indica que la
+    característica acústica de la canción no tiene una relación
+    estadísticamente significativa con la variable dependiente.
+
+-   **Tempo:** La variable Tempo tiene un coeficiente estimado de
+    2.440e-06 y un valor p de 0.366352. Esto indica que el tempo de la
+    canción no es estadísticamente significativo para predecir la
+    variable dependiente.
+
+Al retirar estas variables, el modelo podría tener un mayor ajuste y
+mayor capacidad para explicar la variabilidad en la variable dependiente
+(views_likes_ratio).\
+
+```{r include=FALSE}
+# Ajuste de regresión lineal múltiple para predecir la variable alcoholviews_likes_ratio.
+
+datos_RL1 <- lm(views_likes_ratio~Danceability
+              + Energy 
+              #+ Key
+              + Loudness 
+              + Speechiness 
+              #+ Acousticness 
+              + Instrumentalness 
+              #+ Liveness
+              + Valence 
+              #+ Tempo 
+              + Duration_ms
+              #+ Views
+              #+ Likes
+              + Comments
+              + Stream,
+              data = datos_df)
+datos_RL1
+```
+
+```{r echo=FALSE, message=FALSE}
+library(knitr)
+library(kableExtra)
+
+# Resumen del modelo
+resumen_modelo <- summary(datos_RL1)
+
+# Crear una tabla con los coeficientes y los estadísticos
+tabla_resumen <- data.frame(
+  Coefficients = rownames(resumen_modelo$coefficients),
+  Estimate = resumen_modelo$coefficients[, "Estimate"],
+  `Std. Error` = resumen_modelo$coefficients[, "Std. Error"],
+  `t value` = resumen_modelo$coefficients[, "t value"],
+  `Pr(>|t|)` = resumen_modelo$coefficients[, "Pr(>|t|)"],
+  `Multiple R-squared` = resumen_modelo$r.squared,
+  `Adjusted R-squared` = resumen_modelo$adj.r.squared
+)
+
+# Formatear la tabla con kable y kableExtra
+tabla_formateada <- kable(tabla_resumen, align = "c", caption = "Resumen del modelo de regresión lineal múltiple datos_RL1") %>%
+  kable_styling(bootstrap_options = "striped", full_width = FALSE, font_size = 12)
+
+# Imprimir la tabla
+tabla_formateada
+
+```
+
+```{r include=FALSE}
+summary(datos_RL)
+summary(datos_RL1)
+```
+
+Al comparar los dos modelos, podemos observar las siguientes
+diferencias:
+
+1.  **Predictores adicionales**: El primer modelo "datos_RL", incluye el
+    predictor "Key", "Acousticness", "Liveness" y "Tempo", que no están
+    presentes en el segundo modelo "datos_RL1".
+
+2.  **Estadísticas de ajuste:** El primer modelo de regresión lineal
+    "datos_RL", tiene un R cuadrado ajustado ligeramente mayor (0.06149)
+    en comparación con el segundo modelo (0.06133), lo que sugiere un
+    ajuste ligeramente mejor en términos de explicación de la
+    variabilidad en la variable dependiente. Sin embargo, la diferencia
+    es mínima y ambos modelos tienen un ajuste deficiente en general.
+
+En resumen, el primer modelo incluye cuatro predictores adicionales
+("Key", "Acousticness", "Liveness" y "Tempo"), pero estos no son
+significativos en la explicación de la variabilidad en la variable
+dependiente. Por lo tanto, en términos de rendimiento y calidad de
+ajuste, el segundo modelo que solo incluye los predictores
+"Danceability, Energy, Loudness, Speechiness, Instrumentalness, Valence,
+Duration_ms, Comments, Stream" es igualmente válido y puede ser
+preferible debido a su simplicidad y mayor significancia estadística de
+los coeficientes.
