--- a/proyecto_final.Rmd
+++ b/proyecto_final.Rmd
@@ -120,6 +120,7 @@ del público con las canciones.
 ```{r include=FALSE}
 library(readr)
 library(dplyr)
+library(caret)
 datos <- read.csv('Spotify_Youtube.csv')
 colnames(datos)
 ```
@@ -203,26 +204,30 @@ datos <- datos %>% select(-one_of('X', 'Artist', 'Track', 'Album', 'Album_type',
 colnames(datos)
 ```
 
-```{r include=FALSE}
-datos_df <- datos  # Crear una copia del conjunto de datos original
-
-# calcula y asigna la relación "views_likes_ratio" entre las variables "Views" y "Likes"
-
-datos_df$views_likes_ratio <-   datos_df$Likes / datos_df$Views
-```
-
-```{r include=FALSE}
-
+```{r}
 # Calcula la cantidad de datos faltantes por columna
-datos_faltantes <- colSums(is.na(datos_df))
+datos_faltantes <- colSums(is.na(datos))
 
 # Imprime la cantidad de datos faltantes por columna
 print(datos_faltantes)
+
+# Eliminar filas con datos faltantes
+datos <- na.omit(datos)
 ```
 
 ```{r include=FALSE}
-# Eliminar filas con datos faltantes
-datos_df <- na.omit(datos_df)
+# calcula y asigna la relación "views_likes_ratio" entre las variables "Views" y "Likes"
+datos$views_likes_ratio <-   datos$Likes / datos$Views
+```
+
+```{r include=FALSE}
+process <- preProcess(as.data.frame(datos), method=c("range"))
+datos_df <-  predict(process, as.data.frame(datos))#log(datos)  # Crear una copia del conjunto de datos original
+
+```
+
+```{r include=FALSE}
+summary(datos_df)
 ```
 
 ```{r echo=FALSE}
@@ -240,6 +245,25 @@ datos_df <- na.omit(datos_df)
 
 # Muestra la tercera parte de columnas
 #head(datos_df[, ((2*part_size)+1):num_cols])
+```
+
+### 2.4 Identificación de datos atípicos y tratamiento de los mismos
+
+Se calculó la cantidad de datos faltantes en el conjunto de datos
+"datos" previo al análisis de la información, y se eliminaron dichas
+observaciones del conjunto de datos.
+
+```{r echo=FALSE, message=FALSE}
+
+library(knitr)
+library(kableExtra)
+
+# Crear una tabla con los datos faltantes
+tabla_datos_faltantes <- data.frame(Datos_faltantes = datos_faltantes)
+
+# Imprimir la tabla en formato horizontal
+kable(tabla_datos_faltantes, format = "html") %>%
+  kable_styling(bootstrap_options = "striped", font_size = 12, full_width = FALSE, position = "float_left")
 ```
 
 ```{r echo=FALSE, message=FALSE}
@@ -288,7 +312,7 @@ par(mfrow = c(4, 2))
 # Itera sobre las primeras ocho variables y crea el histograma
 variables <- colnames(datos_df)[1:16]
 for (i in 1:length(variables)) {
-  hist(datos_df[, variables[i]], main = variables[i], xlab = "", col = "lightblue")
+  boxplot(datos_df[, variables[i]], main = variables[i], xlab = "", col = "lightblue")
 }
 
 # Restaura el diseño de gráficos a una sola columna y una fila
@@ -349,24 +373,45 @@ algunas de las correlaciones más relevantes:
     0.358, lo que sugiere que las canciones con mayor "danceability"
     tienden a tener un mayor "loudness".
 
-### 2.4 Identificación de datos atípicos y tratamiento de los mismos
+```{r echo=FALSE, message=FALSE}
+library(reshape2)
+library(ggplot2)
+# Calculo de la matriz de correlación
+datos_v_l_r <- datos_df %>% select(-one_of('Stream', 'Comments', 'Likes', 'Views'))
+correlaciones_vlr <- cor(datos_v_l_r)
 
-Se calculó la cantidad de datos faltantes en el conjunto de datos
-"datos" previo al análisis de la información, y se eliminaron dichas
-observaciones del conjunto de datos.
+# Convertir la matriz en un dataframe
+cor_df_vlr <- melt(correlaciones_vlr)
 
-```{r include=FALSE, message=FALSE}
+# Graficar la matriz de correlación con un heatmap y anotaciones en las celdas
+ggplot(cor_df_vlr, aes(x=Var1, y=Var2, fill=value)) + 
+  geom_tile() + 
+  scale_fill_gradient2(low="blue", mid="white", high="red", 
+                       midpoint=0, limit=c(-1,1), space="Lab", name="Correlación") +
+  theme_minimal() + 
+  theme(axis.text.x = element_text(angle = 90, vjust = 1, 
+                                    size = 10, hjust = 1),
+        axis.text.y = element_text(size = 10)) + 
+  coord_fixed() + 
+  geom_text(aes(label = round(value, 2)), size = 2, color = "black", alpha = 0.7) + 
+  theme(plot.margin = unit(c(0.1, 0.1, 0.1, 0.1), "cm"))
+```
 
-library(knitr)
-library(kableExtra)
-
-# Crear una tabla con los datos faltantes
-tabla_datos_faltantes <- data.frame(Datos_faltantes = datos_faltantes)
-
-# Imprimir la tabla en formato horizontal
-kable(tabla_datos_faltantes, format = "html") %>%
-  kable_styling(bootstrap_options = "striped", font_size = 12, full_width = FALSE, position = "float_left")
-
+```{r}
+pairs.panels(datos_v_l_r,
+             smooth = TRUE,      # If TRUE, draws loess smooths
+             scale = FALSE,      # If TRUE, scales the correlation text font
+             density = TRUE,     # If TRUE, adds density plots and histograms
+             ellipses = TRUE,    # If TRUE, draws ellipses
+             method = "pearson", # Correlation method (also "spearman" or "kendall")
+             pch = 21,           # pch symbol
+             lm = FALSE,         # If TRUE, plots linear fit rather than the LOESS (smoothed) fit
+             cor = TRUE,         # If TRUE, reports correlations
+             jiggle = FALSE,     # If TRUE, data points are jittered
+             factor = 2,         # Jittering factor
+             hist.col = 4,       # Histograms color
+             stars = TRUE,       # If TRUE, adds significance level with stars
+             ci = TRUE)          # If TRUE, adds confidence intervals
 ```
 
 ## 3. Presentación del análisis estadístico de los datos
@@ -386,12 +431,12 @@ datos_RL <- lm(views_likes_ratio~Danceability
               + Liveness
               + Valence 
               + Tempo 
-              + Duration_ms
+              + Duration_ms,
               #+ Views
               #+ Likes
-              + Comments
-              + Stream,
-              data = datos_df)
+              #+ Comments
+              #+ Stream,
+              data = datos_v_l_r)
 datos_RL
 ```
 
@@ -462,11 +507,11 @@ datos_RL1 <- lm(views_likes_ratio~Danceability
               #+ Liveness
               + Valence 
               #+ Tempo 
-              + Duration_ms
+              + Duration_ms,
               #+ Views
               #+ Likes
-              + Comments
-              + Stream,
+              #+ Comments
+              #+ Stream,
               data = datos_df)
 datos_RL1
 ```
