--- a/proyecto_final.Rmd
+++ b/proyecto_final.Rmd
@@ -571,3 +571,22 @@ ajuste, el segundo modelo que solo incluye los predictores
 Duration_ms, Comments, Stream" es igualmente válido y puede ser
 preferible debido a su simplicidad y mayor significancia estadística de
 los coeficientes.
+
+### Modelo PCA.
+
+```{r}
+# Realizar el análisis PCA
+wine_pca <- prcomp(WINE, scale. = TRUE)
+
+# Calcular el porcentaje de varianza explicada por cada componente principal
+var_exp <- (wine_pca$sdev^2) / sum(wine_pca$sdev^2) * 100
+
+# Agregar los porcentajes de varianza a la matriz
+loadings1 <- cbind(wine_pca$rotation, var_exp)
+
+# Ordenar las filas de la matriz
+#loadings <- loadings[order(abs(loadings[,1]), decreasing = TRUE),]
+
+# Imprimir los resultados
+print(loadings1, digits=2)
+```
